# radiosyncracy

./: .gitignore  README.md
app/: Cargo.toml
app/migrations/2017-11-15-071250_create_users/: up.sql
app/migrations/2017-11-18-155419_create_tracks/: down.sql  up.sql
app/migrations/2017-11-18-155946_create_radios/: down.sql  up.sql
app/migrations/2017-11-18-165649_create_radio_tracks/: down.sql  up.sql
app/migrations/2017-12-01-025845_add_password_to_users/: down.sql  up.sql
app/migrations/2017-12-01-030607_give_default_timestamps/: down.sql  up.sql
app/migrations/2017-12-15-065336_add_password_salt_to_users/: down.sql  up.sql
app/src/: api_routes.rs  connection.rs  environment.rs  main.rs
app/src/controllers/: mod.rs  sessions_controller.rs  tracks_controller.rs  users_controller.rs  utils.rs
app/src/models/: mod.rs  radio.rs  radio_track.rs  track.rs  user.rs  utils.rs
app/src/spec/: mod.rs
app/src/tests/: mod.rs
app/src/tests/factories/: mod.rs  radio.rs  radio_track.rs  track.rs  user.rs
app/src/tests/models/: mod.rs  radio_tests.rs  radio_track_tests.rs  track_tests.rs  user_tests.rs
app/src/views/api/: mod.rs
app/src/views/api/tracks/: _track.rs  delete.rs  mod.rs
app/src/views/api/users/: _user.rs  create.rs  find.rs  mod.rs
client/: App.js
client/Radiosyncracy/: AppDelegate.swift  DataViewController.swift  ModelController.swift  RootViewController.swift
client/Radiosyncracy.xcodeproj/: project.pbxproj
client/RadiosyncracyTests/: RadiosyncracyTests.swift
script/: test
(+3 files in other folders)
