[package]
name = "server"
version = "0.1.0"
authors = ["marcmaniez <marc.maniez@gmail.com>"]

[dependencies]
chrono =  "*"
diesel = { version = "0.99.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
diesel_infer_schema = { version = "0.99.0", features = ["postgres"] }
dotenv = "0.9.0"
iron = "0.5.*"
r2d2 = "*"
r2d2-diesel = "*"
